--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,45 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+*{
+    padding: 0;
+    margin: 0;
+}
+
+.container{
+    max-width: 1440px;
+    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+body{
+    font-family: "Roboto", sans-serif;
+}
+.header .container{
+    display: flex;
+    align-items: center;
+}
+
+.container-vse{
+    margin: 0 auto;
+}
+
+/*ТУТ БУДЕТ КАРТОЧКА*/
+.foto{
+    width: 212px;
+    height: 270px;
+    background-color: black;
+    border-radius: 10px;
+}
+
+.stars{
+    width: 104px;
+    height: 16px;
+    background-color: black;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    font-weight: 500;
+}
+
+.stock{
+    color: #747474;
+}
+
