--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,30 +1,49 @@
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/*.blade.php';
-
 * {
     padding: 0;
     margin: 0;
-    background-color: #eeeeee;
 }
 
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    justify-content: center;
     width: 100%;
     display: flex;
-    margin-top: 26px;
+    flex-direction: column;
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+.tools-info{
+    margin-top: 12px;
+    color: #707070;
+}
+.tools-info a{
+    color: #707070;
+    text-decoration: none;
+    margin-top: 12px;
+    margin-bottom: 16px;
+    font-weight: 400;
+}
+
+.tools-info p{
+    margin-top: 12px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    color: #0B0D0D;
 }
 
 .toolsANDcard {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-
-    /* ДАНЯ: Я ТУТ ДОБАВИЛ */
-    flex-direction: column;
+    width: 312px;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Inter", sans-serif;
+    background-color: #F7F7F7;
 }
 .header {
     display: flex;
@@ -33,64 +52,51 @@ body {
 
 /*ПОИСК*/
 .tools {
-    width: 312px;
+    min-width: 240px;
+    background-color: aqua;
+    margin-right: 20px;
 }
 
-.tools-title {
-    font-size: 36px;
-    font-weight: 600;
-}
-
-/*ТУТ БУДЕТ КАРТОЧКА*/
-.cards {
-    display: flex;
+.cards-wrapper {
+    width: 1100px;
     margin: 0 auto;
-    max-width: 872px;
-    width: 100%;
-
-    /* ДАНЯ: Я ТУТ ДОБАВИЛ */
-    flex-wrap: wrap;
-    gap: 8px;
 }
 
-/* ДАНЯ: Я ТУТ ДОБАВИЛ */
-.card {
-    max-width: 210px;
-}
-
-.paginate {
+.cards-row {
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    width: 1100px;
+}
+
+.card {
+    width: 250px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .foto {
-    width: 212px;
-    height: 270px;
+    width: 250px;
+    height: 252px;
     background-color: black;
     border-radius: 10px;
 }
 
-.stars {
-    width: 104px;
-    height: 16px;
-    background-color: black;
-    margin-top: 16px;
-    margin-bottom: 16px;
-}
-
 .description {
-    font-weight: 500;
-}
-
-.stock {
-    color: #747474;
-    margin: 16px 0 16px 0;
+    margin-top: 12px;
+    font-size: 14px;
     font-weight: 400;
+    line-height: 20px;
+    flex-grow: 1;
+    color: #313131;
 }
-
-.priceAndBasket {
-    display: flex;
-    justify-content: space-between;
+.description1 {
+    margin-bottom: 12px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    flex-grow: 1;
+    color: #929292;
 }
 
 .Price {
@@ -98,34 +104,39 @@ body {
 }
 
 .NewPrice {
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
     display: flex;
     justify-content: center;
     align-items: end;
 }
 
 .OldPrice {
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 400;
+    line-height: 16px;
     display: flex;
     justify-content: center;
     margin-left: 8px;
     text-decoration: line-through;
     color: #7f7f7f;
-}
-.OldPrice {
     align-items: end;
 }
 
-.Basket {
-}
-.Basket button {
-    width: 40px;
-    height: 40px;
-    border-radius: 4px;
-    background-color: #141414;
+.priceAndBasket button {
+    width: 72px;
+    height: 36px;
+    border-radius: 6px;
+    background-color: #0075B1;
     border: 0;
     cursor: pointer;
+    color: #ffffff;
+    margin-top: 12px;
+}
+.priceAndBasket button a{
+    font-size: 14px;
+    line-height: 20px;
+    text-decoration: none;
     color: #ffffff;
 }
