--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
+/* app.css */
+
 * {
     padding: 0;
     margin: 0;
@@ -26,7 +28,7 @@
     font-weight: 400;
 }
 
-.tools-info p{
+.tools-info h2{
     margin-top: 12px;
     margin-bottom: 20px;
     font-weight: 500;
@@ -38,7 +40,6 @@
 .toolsANDcard {
     display: flex;
     justify-content: space-between;
-    width: 312px;
 }
 
 body {
@@ -58,14 +59,15 @@ body {
 }
 
 .cards-wrapper {
-    width: 1100px;
-    margin: 0 auto;
+    flex: 1;
 }
 
 .cards-row {
     display: flex;
     justify-content: space-between;
-    width: 1100px;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
 .card {
@@ -133,10 +135,6 @@ body {
     cursor: pointer;
     color: #ffffff;
     margin-top: 12px;
-}
-.priceAndBasket button a{
     font-size: 14px;
     line-height: 20px;
-    text-decoration: none;
-    color: #ffffff;
 }
