--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -59,3 +59,217 @@
 .top-button{
     margin-top: 50px;
 }
+
+.info-block {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-height: 100%;
+  gap: 20px;
+  padding: 20px;
+  background-color: #f9f9f9; 
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  width: 300px; 
+  padding: 15px;
+}
+
+.text-up {
+  font-weight: bold;
+  font-size: 1.2em;
+  color: #313131;
+  margin-bottom: 10px;
+}
+
+.text-down {
+  font-size: 0.95em;
+  color: #707070;
+}
+
+.img-info-block{
+  width: 30px; 
+  height: auto;
+}
+
+.stocks{
+    background: #FFFFFF;
+}
+.blocks{
+    display: flex;
+    justify-content: center;
+}
+/*block*/
+.block1{
+    background-color: #F1F1F1;
+    
+}
+.block2{
+    background-color: #F1F1F1;
+}
+.block3{
+    background-color: #0075B1;
+}
+.block4{
+    background-color: #F1F1F1;
+}
+/*block*/
+
+.b1-info{
+    display: flex;
+}
+.b3-block{
+    display: flex;
+}
+
+.b1-percent{
+    font-size: 96px;
+    color: #0075B1;
+}
+
+/*up*/
+.b1-description-up{
+    font-size: 14px;
+    color: #707070;
+}
+.b2-description-up{
+    font-size: 14px;
+    color: #707070;
+}
+.b3-description-up{
+    font-size: 14px;
+    color: #ffffff;
+}
+.b4-description-up{
+    font-size: 14px;
+    color: #707070;
+}
+/*up*/
+
+
+/*down*/
+.b1-description-down{
+    font-size: 24px;
+    color: #313131;
+}
+.b2-description-down{
+    font-size: 24px;
+    color: #313131;
+}
+.b3-description-down{
+    font-size: 24px;
+    color: #ffffff;
+}
+.b4-description-down{
+    font-size: 24px;
+    color: #313131;
+}
+/*down*/
+
+/*detailed*/
+.b1-detailed{
+    text-decoration: none;
+    font-size: 14px;
+    color: #0075B1;
+}
+.b2-detailed{
+    text-decoration: none;
+    font-size: 14px;
+    color: #0075B1;
+}
+.b3-detailed{
+    text-decoration: none;
+    font-size: 14px;
+    color: #ffffff;
+}
+.b4-detailed{
+    text-decoration: none;
+    font-size: 14px;
+    color: #0075B1;
+}
+/*detailed*/
+
+.p-block1{
+    display: flex;
+    justify-content: space-between;
+}
+.p-block2{
+    background-color: #313131;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1346px;
+    height: 398px;
+}
+
+.forms{
+    margin-top: 40px;
+    background-color: #313131;
+    width: 1360px;
+    height: 208px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.f1-info{
+    text-align: center;
+    padding-top: 30px;
+}
+.f2-info{
+    margin-top: 35px;
+    display: flex;
+    justify-content: space-around;
+}
+.f1-description-up{
+    color: #FFFFFF;
+    font-size: 24px;
+}
+.f1-description-down{
+    color: #FFFFFF;
+    font-size: 14px;
+}
+/* Обертка для выпадающего списка */
+
+/* Кнопка */
+.dropbtn {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Контент списка */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  z-index: 1;
+  margin-top: 2px;
+}
+
+/* Ссылки внутри списка */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Изменение цвета при наведении */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Показывать список при наведении на контейнер */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown{
+    margin-left: 6px;
+}
+.drop-img{
+    margin-left: 91px;
+}
