--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -58,7 +58,9 @@ body {
 }
 
 .cards-wrapper {
-    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap:20px;
 }
 
 .cards-row {
@@ -69,18 +71,19 @@ body {
     margin-bottom: 20px;
 }
 
+
 .card {
-    width: 250px;
-    margin-bottom: 20px;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .foto {
-    width: 250px;
-    height: 252px;
+    width: 100%;
+    aspect-ratio: 1;
     background-color: black;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .description {
@@ -278,4 +281,26 @@ body {
         }
 
 
+@media(max-width:1100px){
+ .cards-wrapper {
+    grid-template-columns: repeat(3,1fr);
+
+    }
+}
+@media(max-width:678px){
+    .cards-wrapper {
+    grid-template-columns: repeat(2,1fr);
+
+    }
+    .cards-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+    .cards-wrapper {
+    gap: 16px;
+    }
+}
 /* filter */
