--- a/resources/css/head_foot.css
+++ b/resources/css/head_foot.css
@@ -351,3 +351,12 @@
         color: #707070;
     }
 }
+
+@media (max-width: 412px){
+    .max-920-header {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 64px;
+        margin-bottom: 24px;
+    }
+}
