--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -25,11 +25,13 @@
 }
 /*Главная*/
 
+.top{
+    padding-top: 175px;
+}
 .main-car {
     padding-left: 40px;
-    padding-top: 82px;
     height: 734px;
-    background: url(/public/images/car.svg) no-repeat center;
+    background: url(/public/images/img_welcome.jpg) no-repeat center;
     background-size: cover;
 }
 .text-1 {
@@ -69,29 +71,24 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    max-width: 1440px;
+    height: 110px;
     margin: 0 auto;
     gap: 20px;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #E1E1E1;
 }
-
 .block {
     display: flex;
     flex-direction: column;
-    width: 300px;
     padding: 15px;
 }
-
 .text-up {
-    font-weight: bold;
-    font-size: 1.2em;
+    font-size: 14px;
     color: #313131;
-    margin-bottom: 10px;
+    margin-bottom: 4px;
 }
-
 .text-down {
-    font-size: 0.95em;
+    font-size: 12px;
     color: #707070;
 }
 
@@ -118,8 +115,13 @@
     gap: 10px;
 }
 .theme {
+    font-size: 24px;
     margin-bottom: 24px;
     padding-top: 58px;
+}
+
+.theme h3{
+    font-weight: 500;
 }
 /*block*/
 .block1 {
@@ -277,7 +279,7 @@
 
 .forms {
     margin-top: 40px;
-    background-color: #313131;
+    background-image: url(/public/images/bass.png);
     width: 1360px;
     height: 208px;
     margin-left: auto;
@@ -310,38 +312,70 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 176px;
+    height: 36px;
+    display: flex;
+    justify-content: space-between;
 }
 
-/* Контент списка */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    z-index: 1;
-    margin-top: 2px;
-}
-
-/* Ссылки внутри списка */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Изменение цвета при наведении */
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-/* Показывать список при наведении на контейнер */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 .dropdown {
     margin-left: 6px;
 }
 .drop-img {
-    margin-left: 91px;
+   width: 10px;
+}
+
+.dropdown2{
+    margin-left: 6px;
+}
+.dropbtn2{
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    height: 16px;
+    width: 150px;
+}
+.dropdown3{
+   margin-left: 6px;
+}
+.dropbtn3{
+    background-color: #0075B1;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    border: none;
+    border-radius: 6px;
+    height: 36px;
+    width: 131px;
+}
+
+.news-blocks{
+
+}
+
+.new-img{
+    width: 72px;
+    height: 71px;
+}
+
+.news-blocks{
+    display: flex;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 40px;
+}
+.new-block{
+    display: flex;
+    padding: 20px;
+    border: 1px solid;
+    border-color: #0075B1;
+}
+.new-info-up{
+    font-size: 12px;
+    color: #707070;
+}
+.new-info-down{
+    font-size: 12px;
 }
