--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -367,7 +367,7 @@
     justify-content: space-between;
 }
 .p-block2 {
-    background-color: #313131;
+    margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
     width: 1346px;
@@ -474,4 +474,9 @@
     font-size: 24px;
     margin-bottom: 24px;
     padding-top: 58px;
+}
+
+
+.p-block2{
+    display: flex;
 }
